fix homepage styles - add new styles

--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 links:
-  arena: https://jeanwoj.arena.com/
+  arena: https://www.are.na/jean-wojciechowski
   behance: https://www.behance.net/jeanwoj
   instagram: https://www.instagram.com/jean.woj/
-  tumblr: https://jeanwoj.tumblr.com/
+  tumblr: https://jeanwojciechowski.tumblr.com/
 
 # Build settings
 markdown: kramdown
