--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,11 @@ theme: minima
 plugins:
   - jekyll-feed
 
+collections:
+  projects:
+    output: true
+    sort_by: position
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
