--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ email: your-email@example.com
 description: Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jekyllrb
 github_username: jekyll
 links:
@@ -28,4 +28,10 @@ links:
 markdown: kramdown
 theme: minima
 plugins:
-- jekyll-feed
+  - jekyll-feed
+
+exclude:
+  - tsconfig.json
+  - scripts.ts
+  - yarn.lock
+  - package.json
