--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ collections:
   typefaces:
     title: Typefaces
     output: false
+  wip:
+    title: Work In Progress
+    output: false
   uploads:
     title: Uploads
     output: true
@@ -33,16 +36,21 @@ plugins:
 defaults:
   - scope:
       path: ""
+      type: wip
+    values:
+      image:
+  - scope:
+      path: ""
       type: projects
     values:
-      title: Project Name
-      project_name: Project Name
+      title: Title
+      project_name: Name
+      project_headline: Headline
+      project_brief: Brief
+      project_creative_field: Creative Field
+      project_client: Client
+      project_headline_homepage:
       project_cover_image:
-      project_headline: Project Headline
-      project_brief: Project Brief
-      project_creative_field:
-      - Branding
-      - Visual Identity for Christian Choir
       typeface:
       layout: project
   - scope:
@@ -51,19 +59,18 @@ defaults:
     values:
       title: Typeface Name
       font_options:
-        Text Regular:
-          family: Font Family
-          weight: Font Weight
       homepage_type_tester:
-        font_option: Text Regular
+        font_option: Option Name
         default_text: |-
           Text to show in
           Homepage
       project_page_type_testers:
-        - font_option: Text Regular
+        - font_option: Option Name
           default_text: |-
             Text to show in
             Project Page
+      opentype_features:
+        - E.g. "dlig", "salt", "ss01", "swsh"
 
 exclude:
 - tsconfig.json
