--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ collections:
 defaults:
 - scope:
     path: ''
-    type: wip
+    type: posts
   values:
-    image: 
+    image:
 - scope:
     path: ''
     type: projects
@@ -31,16 +31,16 @@ defaults:
     project_brief: Brief
     project_creative_field: Creative Field
     project_client: Client
-    project_headline_homepage: 
-    project_cover_image: 
-    typeface: 
+    project_headline_homepage:
+    project_cover_image:
+    typeface:
     layout: project
 - scope:
     path: ''
     type: typefaces
   values:
     title: Typeface Name
-    font_options: 
+    font_options:
     homepage_type_tester:
       font_option: Option Name
       default_text: |-
@@ -57,8 +57,8 @@ email: your-email@example.com
 description: Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for Google search
   results) and in your feed.xml site description.
-baseurl: 
-url: 
+baseurl:
+url:
 twitter_username: jekyllrb
 github_username: jekyll
 links:
